# t3-linguagens

t3-linguagens/: CHANGELOG.md  README.md  t3-linguagens.cabal
t3-linguagens/.stack-work/: stack.sqlite3
t3-linguagens/src/: Main.hs
