cabal-version:       2.2

name:                t3-linguagens
version:             0.1.0.0
homepage:            https://github.com/githubuser/t3-linguagens#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable t3-linguagens
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/githubuser/t3-linguagens